<resources>
    <string name="app_name">My Application4</string>
    <string name="password">Password</string>
    <string name="Email">Email</string>

    <string name="sign_up">Sign Up</string>
    <string name="good_night">Good Night</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="confirm_password">confirm_password</string>
    <string name="login">Login</string>
    <string name="create_an_account">create_an_account</string>
    <string name="email">Email</string>
    <string name="enter_source_location">Enter Source Location</string>
    <string name="enter_destination_location">Enter Destination Location</string>
    <string name="display_track">Display Track</string>
</resources>