<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_source"
        android:hint="@string/enter_source_location"
        android:padding="12dp"
        android:background="@android:drawable/editbox_background"
        android:autofillHints=""
        android:inputType="" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_destination"
        android:hint="@string/enter_destination_location"
        android:padding="12dp"

        android:layout_marginTop="8dp"
        android:background="@android:drawable/editbox_background"
        android:autofillHints=""
        android:inputType="" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_track"
        android:text="@string/display_track"
        android:layout_marginTop="16dp"
        android:padding="12dp"/>

</LinearLayout>